--- a/index.html
+++ b/index.html
@@ -10,24 +10,17 @@
 
 </head>
 <body>
- <section>
-    <div class="box1">
-        <h1>welcome to </h1>
-    <h1>  <span class="name-edit">    mridul </span>website
-
-    </h1>
-    <br>
-    <br>
-    <br>
-
-    <h3> world class developer </h3>
-    <p>
-        i am a boy .i do anyting .i willbe becomae  a quick brown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quick brown fox jumps ove the lazy dog a quick brown fox jumps over the lazy dog a quick brown fox jumps over the lazl dog a quick  brown fox jumps over the lazy dog a quick brown fox jumps over the laz dog a quick brown fox jumps over the lazy dog a quick brown fox jump s over the lazy dog a quick brown fox jumps over the lazy dog a quickbrown fox jumps over the lazy dog a quick brown fox jumps over the lazy  dog a quickbrown fox jumps over the lazy dog a quickbrown fox jumps over the lazy dog a quickbrown fox jumps over the lazy dog a quickbrown for jump sover the lazy dog a quickbrown fox jumps over the lazl dog 
-    </p>
-    </div>
-    <div class="box2">
-        <img src="photo/image 11.png" alt="">
-    </div>
- </section>
+    <section class="sec1">
+        <div class="box1">
+            <h1>wellcome to</h1> 
+            <h1> <span class="name-style"> mridul's </span>website</h1>
+            <p>
+             a quick brown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quickbrown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quickbrown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quickbrown foxjumps over the lazydog a quick brown fox jumps over the lazy dog 
+            </p>
+        </div>
+        <div class="box1">
+            <img src="photo/image 11.png" alt="" class="img1">
+        </div>
+    </section>
 </body>
 </html>
