--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 
 </head>
 <body>
-    <section class="sec1">
-        <div class="box1">
-            <h1>wellcome to</h1> 
-            <h1> <span class="name-style"> mridul's </span>website</h1>
-            <p>
-             a quick brown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quickbrown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quickbrown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quickbrown foxjumps over the lazydog a quick brown fox jumps over the lazy dog 
-            </p>
-        </div>
-        <div class="box1">
-            <img src="photo/image 11.png" alt="" class="img1">
-        </div>
-    </section>
+  <section>
+      <div class="dox1">
+          <h1>welcome to</h1> 
+          <h1><span class="name-style">mridul's </span> website </h1>
+          <p>
+              a quick brown fox jukmps over the lazy dog a quick brown fox jumps over the lazy dog a quick brwon fox jumps over the lazlydog  aq a quick brown fox jumps over the lazy dog a quick brown fox jumps over the lazy dog a quick brhown fox jumjps over the lazy do a quick a brown fox jumps over teh lazy dog a quick brwon fox jumps over the lazy dog  a quick brwon foxjumps over the lazy dog a quick brown fox jumps over thge lazly dog a  a quick brown fox jumps over the lazy dog aq uick brown fox jumps over the layaz do a quick brownw fox jumps over teh lazy dog a quick brwonfox jumps over the lazy dog a quick brown fox jumsp over the lazy dog a quick brown fox jumps over the lazy doga quick brwon foxj umps over the lazy dog a quick brown fox jumps over the lazy dog a quick brwon fox jumps over the lazy dog 
+          </p>
+          <a href=""></a>
+      </div>
+      <div class="dox1">
+        <img src="photo/image 12.png" alt="">
+      </div>
+  </section>
 </body>
 </html>
